feat: migrate db
feat: api create config nft role

feat: list and delete nft role config

feat: finalize CRUD set

chore: setup new cronjob

feat: cronjob update nft role

chore: cmt test

chore: restrict role

feat: remove role if exist higher role
