# docs/swagger.json
@@ -729,7 +729,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.ListGuildNFTRolesResponse"
+                            "$ref": "#/definitions/response.ListGuildGroupNFTRolesResponse"
                         }
                     }
                 }
@@ -753,48 +753,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/request.ConfigNFTRoleRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/response.NewGuildNFTRoleResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/configs/nft-roles/{config_id}": {
-            "put": {
-                "description": "Edit guild nft role",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Config"
-                ],
-                "summary": "Edit guild nft role",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Config ID",
-                        "name": "config_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Edit NFT role request",
-                        "name": "Request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.ConfigNFTRoleRequest"
+                            "$ref": "#/definitions/request.ConfigGroupNFTRoleRequest"
                         }
                     }
                 ],
@@ -802,7 +761,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.EditGuildNFTRoleResponse"
+                            "$ref": "#/definitions/response.NewGuildGroupNFTRoleResponse"
                         }
                     }
                 }
@@ -822,9 +781,41 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Config ID",
-                        "name": "config_id",
-                        "in": "path",
+                        "description": "32951e68-9959-4e1d-88ca-22b442e19efe|45d06941-468b-4e5e-8b8f-d20c77c87805",
+                        "name": "config_ids",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ResponseMessage"
+                        }
+                    }
+                }
+            }
+        },
+        "/configs/nft-roles/group": {
+            "delete": {
+                "description": "Remove guild group nft role",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Config"
+                ],
+                "summary": "Remove guild group nft role",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Group config ID",
+                        "name": "group_config_id",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -3803,29 +3794,6 @@
                 }
             }
         },
-        "model.GuildConfigNFTRole": {
-            "type": "object",
-            "properties": {
-                "guild_id": {
-                    "type": "string"
-                },
-                "id": {
-                    "$ref": "#/definitions/uuid.NullUUID"
-                },
-                "nft_collection_id": {
-                    "$ref": "#/definitions/uuid.NullUUID"
-                },
-                "number_of_tokens": {
-                    "type": "integer"
-                },
-                "role_id": {
-                    "type": "string"
-                },
-                "token_id": {
-                    "type": "string"
-                }
-            }
-        },
         "model.GuildConfigRepostReaction": {
             "type": "object",
             "properties": {
@@ -4201,6 +4169,29 @@
                 }
             }
         },
+        "request.ConfigGroupNFTRoleRequest": {
+            "type": "object",
+            "properties": {
+                "collection_address": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "group_name": {
+                    "type": "string"
+                },
+                "guild_id": {
+                    "type": "string"
+                },
+                "number_of_tokens": {
+                    "type": "integer"
+                },
+                "role_id": {
+                    "type": "string"
+                }
+            }
+        },
         "request.ConfigLevelRoleRequest": {
             "type": "object",
             "properties": {
@@ -4211,29 +4202,6 @@
                     "type": "integer"
                 },
                 "role_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "request.ConfigNFTRoleRequest": {
-            "type": "object",
-            "properties": {
-                "guild_id": {
-                    "type": "string"
-                },
-                "id": {
-                    "$ref": "#/definitions/uuid.NullUUID"
-                },
-                "nft_collection_id": {
-                    "$ref": "#/definitions/uuid.NullUUID"
-                },
-                "number_of_tokens": {
-                    "type": "integer"
-                },
-                "role_id": {
-                    "type": "string"
-                },
-                "token_id": {
                     "type": "string"
                 }
             }
@@ -4701,6 +4669,29 @@
                 }
             }
         },
+        "response.ConfigGroupNFTRoleResponse": {
+            "type": "object",
+            "properties": {
+                "group_name": {
+                    "type": "string"
+                },
+                "guild_id": {
+                    "type": "string"
+                },
+                "nft_collection_configs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.NFTCollectionConfig"
+                    }
+                },
+                "number_of_tokens": {
+                    "type": "integer"
+                },
+                "role_id": {
+                    "type": "string"
+                }
+            }
+        },
         "response.ConfigureInvitesResponse": {
             "type": "object",
             "properties": {
@@ -4744,17 +4735,6 @@
                 },
                 "ok": {
                     "type": "boolean"
-                }
-            }
-        },
-        "response.EditGuildNFTRoleResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/model.GuildConfigNFTRole"
-                },
-                "message": {
-                    "type": "string"
                 }
             }
         },
@@ -5108,38 +5088,6 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/response.HandleUserActivityResponse"
-                }
-            }
-        },
-        "response.GuildNFTRolesResponse": {
-            "type": "object",
-            "properties": {
-                "color": {
-                    "type": "integer"
-                },
-                "guild_id": {
-                    "type": "string"
-                },
-                "id": {
-                    "$ref": "#/definitions/uuid.NullUUID"
-                },
-                "nft_collection": {
-                    "$ref": "#/definitions/model.NFTCollection"
-                },
-                "nft_collection_id": {
-                    "$ref": "#/definitions/uuid.NullUUID"
-                },
-                "number_of_tokens": {
-                    "type": "integer"
-                },
-                "role_id": {
-                    "type": "string"
-                },
-                "role_name": {
-                    "type": "string"
-                },
-                "token_id": {
-                    "type": "string"
                 }
             }
         },
@@ -5549,14 +5497,46 @@
                 }
             }
         },
-        "response.ListGuildNFTRolesResponse": {
+        "response.ListGuildGroupNFTRolesResponse": {
             "type": "object",
             "properties": {
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/response.GuildNFTRolesResponse"
+                        "$ref": "#/definitions/response.ListGuildNFTRoleConfigsResponse"
                     }
+                }
+            }
+        },
+        "response.ListGuildNFTRoleConfigsResponse": {
+            "type": "object",
+            "properties": {
+                "color": {
+                    "type": "integer"
+                },
+                "group_name": {
+                    "type": "string"
+                },
+                "guild_id": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "nft_collection_configs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/response.NFTCollectionConfig"
+                    }
+                },
+                "number_of_tokens": {
+                    "type": "integer"
+                },
+                "role_id": {
+                    "type": "string"
+                },
+                "role_name": {
+                    "type": "string"
                 }
             }
         },
@@ -5620,6 +5600,44 @@
                     "additionalProperties": {
                         "type": "number"
                     }
+                }
+            }
+        },
+        "response.NFTCollectionConfig": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "author": {
+                    "type": "string"
+                },
+                "chain_id": {
+                    "type": "string"
+                },
+                "collection_id": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "erc_format": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "is_verified": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "symbol": {
+                    "type": "string"
                 }
             }
         },
@@ -5734,7 +5752,7 @@
         "response.NewGuildConfigWalletVerificationMessageResponse": {
             "type": "object",
             "properties": {
-                "Data": {
+                "data": {
                     "$ref": "#/definitions/model.GuildConfigWalletVerificationMessage"
                 },
                 "status": {
@@ -5742,11 +5760,11 @@
                 }
             }
         },
-        "response.NewGuildNFTRoleResponse": {
+        "response.NewGuildGroupNFTRoleResponse": {
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/model.GuildConfigNFTRole"
+                    "$ref": "#/definitions/response.ConfigGroupNFTRoleResponse"
                 },
                 "message": {
                     "type": "string"
